--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
         <section id="cv">
             <h2 class="title">Mon <b>profil</b></h2>
-            <p>Diplômé en tant que Game Designer, Level Designer et Narrative designer de <b class="age"></b> ans, je suis actuellement à la recherche d'un <b>Master</b> dans le secteur du jeu vidéo ou du jeu de société</p>
+            <p>Diplômé en tant que Game Designer, Level Designer et Narrative designer de <b class="age"></b> ans, je suis actuellement en <b>Master</b> dans le secteur du jeu vidéo au sein de la formation HIC MAJIC </p>
             <div class="card">
                 <img src="assets/img/Mignon_Kieran_CV.jpg" href="assets/img/Mignon_Kieran_CV.jpg" target="_blank" alt="Mon CV">
                 <div class="content">
